--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ opencv_python==4.1.0.25
 baidu_aip==2.2.13.0
 numpy==1.16.2
 scipy==1.2.1
-tensorflow==1.13.1
+jieba
+pymysql
 requests==2.21.0
 scikit_learn==0.21.0
